refactor: streamline components and improve data handling; update configurations and enhance type definitions

--- a/.github/workflows/deploy-nextjs.yml
+++ b/.github/workflows/deploy-nextjs.yml
@@ -79,6 +79,8 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
+        env:
+          NODE_TLS_REJECT_UNAUTHORIZED: '0'
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
